--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
   <title>隱私權政策</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1 {
+      color: #0073e6;
+    }
+  </style>
 </head>
 <body>
   <h1>隱私權政策</h1>
-  <p>我們重視您的隱私。本應用程式不會收集、儲存或分享任何個人資料。</p>
+  <p>我們非常重視您的隱私權。本應用程式不會收集、儲存或分享任何個人資料。</p>
+
+  <h2>資料收集</h2>
+  <p>本應用程式不會主動收集任何形式的個人資訊，包括但不限於姓名、電子郵件、位置資訊等。</p>
+
+  <h2>第三方服務</h2>
+  <p>本應用程式不使用任何第三方分析、廣告或追蹤服務。</p>
+
+  <h2>聯絡我們</h2>
+  <p>若您對本隱私政策有任何疑問，請透過電子郵件聯繫我們：<a href="mailto:your@email.com">your@email.com</a></p>
+
+  <p>本政策如有更新，將會在此頁面公布最新版本。</p>
+
+  <p>最後更新日期：2025 年 3 月 16 日</p>
 </body>
 </html>
