--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>本應用程式不使用任何第三方分析、廣告或追蹤服務。</p>
 
   <h2>聯絡我們</h2>
-  <p>若您對本隱私政策有任何疑問，請透過電子郵件聯繫我們：<a href="mailto:your@email.com">your@email.com</a></p>
+  <p>若您對本隱私政策有任何疑問，請透過電子郵件聯繫我們：<a href="mailto:miaowang.tw@gmail.com">miaowang.tw@gmail.com</a></p>
 
   <p>本政策如有更新，將會在此頁面公布最新版本。</p>
 
